fix: update header z-index 🐛

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -38,6 +38,7 @@ $font-small: 14px;
 //----------------------- $z-index ------------------------
 $zindex-subhead: 100;
 $zindex-mobile-search: 1000;
+$zindex-header-mobile: 2000;
 $zindex-side-nav: 2000;
 $zindex-upload-avatar: 10000;
 $zindex-quickapp-btn: 99999;
